--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="content" style="display: none">
       <div class="row">
-          <h1 class="four columns" data-i18n>Donation visualization // Visualisierung von Spenden</h1>
+          <h1 class="four columns" data-i18n>Donation visualization // Visualisierung von Spenden // Donation visualization</h1>
           <div class="five columns">
               <span data-i18n>Language // Sprache // Kieli</span>  <span> </span>
               <select id="selectLang" onchange="chooseLang(event)">
@@ -59,8 +59,8 @@ Kun kaikki laatikot ovat otettuja, pitäisi talo olla rahoitettu.</span>
           </div>
       </div>
 
-      <div data-i18n>
-          <div class="text">
+      <div data-i18n class="text">
+          <div>
               <h2>How this page works:</h2>
               <ol>
                   <li>Every button represents an amount in USD ($) or EUR (€)</li>
@@ -78,6 +78,16 @@ Kun kaikki laatikot ovat otettuja, pitäisi talo olla rahoitettu.</span>
                   <li>Klicke auf einen nicht transparenten Button, wenn du einen Betrag spenden möchtest.</li>
                   <li>Du wirst auf eine Seite mit Zahlungsinformationen weitergeleitet, bitte wähle dort die gewünschte Zahlungsart und führe die Spende durch.</li>
                   <li>Wenn du nachträglich entscheidest einen Betrag doch nicht zu spenden, so klicke bitte erneut auf den entsprechenden Betrag um die Markierung aufzuheben.</li>
+              </ol>
+          </div>
+          <div>
+              <h2>How this page works:</h2>
+              <ol>
+                  <li>Every button represents an amount in USD ($) or EUR (€)</li>
+                  <li>Semi-Transparent numbers are already marked as done by some user, transparent spots are verified to be done.</li>
+                  <li>Click on a non-semi-transparent button if you want to donate a specific amount.</li>
+                  <li>You will be redirected to a page with payment information - please choose a payment method and do the donation.</li>
+                  <li>If you decide to not donate an amount you have already clicked on, please re-click the amount to unmark it.</li>
               </ol>
           </div>
       </div>
