--- a/2/index.html
+++ b/2/index.html
@@ -23,21 +23,19 @@
     </div>
     <div id="content" style="display: none">
       <div class="row">
-          <h1 class="four columns" data-i18n>Donation visualization // Visualisierung von Spenden // Lahjoitussivu // Donations sida</h1>
+          <h1 class="four columns" data-i18n>Wedding donations // Visualisierung von Spenden // Lahjoitussivu // Donations sida</h1>
           <div class="five columns">
               <span data-i18n>Language // Sprache // Kieli // Språk</span>  <span> </span>
               <select id="selectLang" onchange="chooseLang(event)">
                   <option value="en">English</option>
-                  <option value="fi">Finnish</option>
-                  <option value="sv">Swedish</option>
-                  <option value="de">German</option>
+                  
               </select>
           </div>
       </div>
 
       <div data-i18n class="text">
           <p>
-              <span><b>Project name:</b> (Empty)</span><br/>
+              <span><b>Kean and Vivi wedding fundraising</b> </span><br/>
               <span><b>Description:</b> (Empty)</span>
           </p>
           <p>
