--- a/2/index.html
+++ b/2/index.html
@@ -36,7 +36,7 @@
       <div data-i18n class="text">
           <p>
               <span><b>Kean and Vivi wedding fundraising</b> </span><br/>
-              <span><b>Description:</b> (Empty)</span>
+              <span>Help us have make out wedding possible by donating. We have a month to get to our goal and really need you all to make it possible. </span>
           </p>
           <p>
               <span><b>Projektname:</b> (Leer)</span><br/>
