--- a/2/index.html
+++ b/2/index.html
@@ -23,7 +23,7 @@
     </div>
     <div id="content" style="display: none">
       <div class="row">
-          <h1 class="four columns" data-i18n>Wedding donations // Visualisierung von Spenden // Lahjoitussivu // Donations sida</h1>
+          <h1 class="four columns" data-i18n>Wedding Fundraising // Visualisierung von Spenden // Lahjoitussivu // Donations sida</h1>
           <div class="five columns">
               <span data-i18n>Language // Sprache // Kieli // Språk</span>  <span> </span>
               <select id="selectLang" onchange="chooseLang(event)">
