--- a/2/index.html
+++ b/2/index.html
@@ -35,7 +35,7 @@
 
       <div data-i18n class="text">
           <p>
-              <span><b>Kean and Vivi wedding fundraising</b> </span><br/>
+              <span><b>Kean and Vivi Wedding Fundraising</b> </span><br/>
               <span>Help us have make our wedding possible by donating. </span>
 	      <span>We have a month to get to our goal and would really appreciate any financial gift. </span>
           </p>
