--- a/2/index.html
+++ b/2/index.html
@@ -36,7 +36,7 @@
       <div data-i18n class="text">
           <p>
               <span><b>We want to thank you in advance for your generosity.</b> </span><br/>
-              <span>Help us have make our wedding possible by donating. </span>
+              <span>Help us make our wedding possible by donating. </span>
 	      <span>We have a month to get to our goal and would really appreciate any financial gift. </span>
           </p>
           <p>
